--- a/jdbc03/.classpath
+++ b/jdbc03/.classpath
@@ -6,5 +6,12 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="ilbb/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="ilbb/ojdbc8-23.2.0.0.jar"/>
+	<classpathentry kind="lib" path="ilbb/spring-beans-5.3.29.jar"/>
+	<classpathentry kind="lib" path="ilbb/spring-core-5.3.29.jar"/>
+	<classpathentry kind="lib" path="ilbb/spring-dao-2.0.8.jar"/>
+	<classpathentry kind="lib" path="ilbb/spring-jdbc-5.3.29.jar"/>
+	<classpathentry kind="lib" path="ilbb/spring-tx-5.3.29.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
