--- a/spring05jdbc/src/main/resources/application.properties
+++ b/spring05jdbc/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# setting for spring boot
+
+# database setting
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=kh13
+spring.datasource.password=kh13
 
