--- a/spring11integrated/pom.xml
+++ b/spring11integrated/pom.xml
@@ -67,6 +67,17 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
 		
+		<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.15.1</version>
+</dependency>
+<dependency>
+    <groupId>commons-fileupload</groupId>
+    <artifactId>commons-fileupload</artifactId>
+    <version>1.5</version>
+</dependency>
+		
 	</dependencies>
 
 	<build>
